test/mutation_analysis/s0164_maximum_gap/hafis/starchat/mutants/9/result.txt
./test/mutation_analysis/s0164_maximum_gap/hafis/starchat/mutants/9/Solution.java:22: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
